# GLAudioPlayer

./: README.md  settings.gradle
Player/: CMakeLists.txt  build.gradle
Player/src/main/: AndroidManifest.xml
Player/src/main/cpp/: AndroidLog.h  GLAudio.cpp  GLAudio.h  GLBufferDeque.cpp  GLBufferDeque.h  GLCallJava.cpp  GLCallJava.h  GLFFmpeg.cpp  GLFFmpeg.h  GLNative.cpp  GLPCMBean.cpp  GLPCMBean.h  GLQueue.cpp  GLQueue.h  GLStatus.cpp  GLStatus.h
Player/src/main/cpp/soundtouch/include/: STTypes.h
Player/src/main/java/com/pj567/media/bean/: MuteEnum.java  TimeInfoBean.java
Player/src/main/java/com/pj567/media/listener/: OnCompleteListener.java  OnCutAudioPCMInfoListener.java  OnErrorListener.java  OnLoadListener.java  OnPreparedListener.java  OnRecordListener.java  OnStatusListener.java  OnTimeInfoListListener.java  OnVolumeDBListener.java
Player/src/main/java/com/pj567/media/log/: L.java
Player/src/main/java/com/pj567/media/player/: Player.java
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/pj567/media/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
